--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ subjects:
 - !lcsh 'India -- Social life and customs'
 - !lcsh 'India -- Politics and government -- 1765-1947'
 - !lcsh 'India -- Description and travel'
+- GITenberg
 title: Twenty-One Days in India, or, the Tour Of Sir Ali Baba K.C.B.; and, the Teapot
   Series
 url: http://www.gutenberg.org/ebooks/13068
